--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -84,4 +84,4 @@ fos_user:
 msi_cms:
     page_class: Acme\CmsBundle\Entity\Page
     page_layouts:
-        'DadaDadaBundle::layout.html.twig': 'Default'
+        'AcmeCoreBundle::layout.html.twig': 'Default'
