--- a/src/Acme/CoreBundle/Resources/config/routing.yml
+++ b/src/Acme/CoreBundle/Resources/config/routing.yml
@@ -1,3 +1,3 @@
-acme_core_homepage:
-    pattern:  /hello/{name}
-    defaults: { _controller: AcmeCoreBundle:Default:index }
+acme_core_contact_contact:
+    pattern:  /{_locale}/contact
+    defaults: { _controller: AcmeCoreBundle:Contact:contact }
