--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
     "repositories": [
         { "type": "vcs", "url": "https://github.com/gnal/cms4.git" },
         { "type": "vcs", "url": "https://github.com/gnal/MsiCmsBundle.git" },
+        { "type": "vcs", "url": "https://github.com/gnal/MsiSearchBundle.git" },
         { "type": "vcs", "url": "https://github.com/gnal/MsiUserBundle.git" }
     ],
     "require": {
@@ -31,6 +32,7 @@
 
         "msi/admin-bundle": "dev-master",
         "msi/cms-bundle": "dev-master",
+        "msi/search-bundle": "dev-master",
         "msi/user-bundle": "dev-master"
     },
     "scripts": {
