--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
         { "type": "vcs", "url": "https://github.com/gnal/cms4.git" },
         { "type": "vcs", "url": "https://github.com/gnal/MsiCmsBundle.git" },
         { "type": "vcs", "url": "https://github.com/gnal/MsiSearchBundle.git" },
+        { "type": "vcs", "url": "https://github.com/gnal/MsiBaseBundle.git" },
         { "type": "vcs", "url": "https://github.com/gnal/MsiUserBundle.git" }
     ],
     "require": {
@@ -33,6 +34,7 @@
         "msi/admin-bundle": "dev-master",
         "msi/cms-bundle": "dev-master",
         "msi/search-bundle": "dev-master",
+        "msi/base-bundle": "dev-master",
         "msi/user-bundle": "dev-master"
     },
     "scripts": {
