--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -18,6 +18,7 @@ security:
                 provider: fos_userbundle
             logout:
                 path: fos_user_security_logout
+                target: homepage
             anonymous: true
 
     access_control:
