--- a/composer.json
+++ b/composer.json
@@ -5,8 +5,8 @@
         "psr-0": { "": "src/" }
     },
     "repositories": [
-        { "type": "vcs", "url": "https://github.com/gnal/cms4.git" },
-        { "type": "vcs", "url": "https://github.com/gnal/MsiCmsBundle.git" },
+        { "type": "vcs", "url": "https://github.com/gnal/KekAdminBundle.git" },
+        { "type": "vcs", "url": "https://github.com/gnal/KekCmsBundle.git" },
         { "type": "vcs", "url": "https://github.com/gnal/MsiSearchBundle.git" },
         { "type": "vcs", "url": "https://github.com/gnal/MsiBaseBundle.git" },
         { "type": "vcs", "url": "https://github.com/gnal/MsiUserBundle.git" }
