--- a/composer.json
+++ b/composer.json
@@ -6,13 +6,6 @@
     "autoload": {
         "psr-0": { "": "src/" }
     },
-    "repositories": [
-        { "type": "vcs", "url": "https://github.com/gnal/KekAdminBundle.git" },
-        { "type": "vcs", "url": "https://github.com/gnal/KekCmsBundle.git" },
-        { "type": "vcs", "url": "https://github.com/gnal/MsiSearchBundle.git" },
-        { "type": "vcs", "url": "https://github.com/gnal/MsiBaseBundle.git" },
-        { "type": "vcs", "url": "https://github.com/gnal/KekUserBundle.git" }
-    ],
     "require": {
         "php": ">=5.3.3",
         "symfony/symfony": "2.2.*",
@@ -30,13 +23,7 @@
         "doctrine/doctrine-fixtures-bundle": "dev-master",
         "gedmo/doctrine-extensions": "dev-master",
         "friendsofsymfony/user-bundle": "dev-master",
-        "knplabs/knp-menu-bundle": "dev-master",
-
-        "msi/admin-bundle": "dev-master",
-        "msi/cms-bundle": "dev-master",
-        "msi/search-bundle": "dev-master",
-        "msi/base-bundle": "dev-master",
-        "msi/user-bundle": "dev-master"
+        "knplabs/knp-menu-bundle": "dev-master"
     },
     "scripts": {
         "post-install-cmd": [
