--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,9 @@
-/web/bundles/
+/web/bundles
 /app/bootstrap*
 /app/cache/*
 /app/logs/*
-/vendor/
+/vendor
 /app/config/parameters.yml
 
 .DS_Store
 /web/uploads/*
-app/SymfonyRequirements.php
-composer.lock
