--- a/composer.json
+++ b/composer.json
@@ -31,6 +31,7 @@
         "friendsofsymfony/user-bundle": "dev-master",
         "knplabs/knp-menu": "dev-master",
         "knplabs/knp-menu-bundle": "dev-master",
+        "doctrine/doctrine-fixtures-bundle": "2.2.*",
 
         "msi/admin-bundle": "dev-master",
         "msi/cms-bundle": "dev-master",
